# atman

./: bfs.py  board.py  config.py  entities.py  errors.py  game.py  pyproject.toml
boards/: board_01.txt  board_02.txt
